Adding support for opening URLs
